fixed background not covering whole screen when hover

--- a/client/src/components/BackgroundFire/BackgroundFire.css
+++ b/client/src/components/BackgroundFire/BackgroundFire.css
@@ -9,8 +9,8 @@
 .background-fire-video-fade-in {
   display: block;
   object-fit: cover;
-  width: 100vw;
-  height: 100vh;
+  width: 100vw !important;
+  height: 100vh !important;
   z-index: 1;
   opacity: 1;
   /* animation: fadeIn 1s !important; */
